# pydantic-resolve

./: .coveragerc  .gitignore  .python-version  404.html  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SECURITY.md  changelog.md  index.html  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  gh-pages.yml  publish.yml  python-package.yml
about/: index.html
api/: index.html
api_cross_layer/: index.html
api_dataloader/: index.html
api_erd/: index.html
api_graphql/: index.html
api_mcp/: index.html
api_resolver/: index.html
api_subset/: index.html
benchmarks/: README.md  USAGE_PATTERNS.md  __init__.py  conftest.py  test_01_basic_resolve.py  test_02_dataloader.py  test_03_expose.py  test_03_post_methods.py  test_04_aggregations.py  test_04_deep_nesting.py  test_05_expose.py  test_05_large_dataset.py  test_06_mapper.py  test_07_deep_nesting.py  test_08_large_dataset.py
blog_pydantic_resolve_vs_orm/: index.html
blog_rest_graphql_and_er_diagram/: index.html
changelog/: index.html
changelog-v2/: index.html
connect_to_ui/: index.html
core_api/: index.html
cross_layer_data_flow/: index.html
dataloader/: index.html
dataloader_deep_dive/: index.html
demo/: README.md  __init__.py  basic.py  sql.py
demo/graphql/: CHANGELOG.md  GRAPHIQL.md  (+22 more)
devlog/: 25-10-mem-leak.md  25-11-v2-spec.md  25-11-v2.md  25-8-resolve-union.md  26-4-2-sa-plugin.md  26-4-access-control.md
doc/: chinese.md  compare-cn.md  compare-en.md  english.md  from-graphql-to-resolver-en.md  loader-cn.md  loader-en.md
docs/: about.md  about.zh.md  api.md  api.zh.md  api_cross_layer.md  api_cross_layer.zh.md  api_dataloader.md  api_dataloader.zh.md  api_erd.md  api_erd.zh.md  api_graphql.md  api_graphql.zh.md  api_mcp.md  api_mcp.zh.md  api_resolver.md  api_resolver.zh.md  api_subset.md  api_subset.zh.md  blog_pydantic_resolve_vs_orm.md  blog_rest_graphql_and_er_diagram.md  changelog-v2.md  changelog-v2.zh.md  changelog.en.md  changelog.md  changelog.zh.md  composer.rst  conf.py  connect_to_ui.zh.md  context.rst  core_api.md  core_api.zh.md  cross_layer_data_flow.md  cross_layer_data_flow.zh.md  dataloader.md  dataloader.zh.md  dataloader_deep_dive.md  dataloader_deep_dive.zh.md  erd_and_autoload.md  erd_and_autoload.zh.md  erd_define_subset.md  (+54 more)
docs_legacy/: changelog.rst  conf.py  dataloader.rst  index.rst
docs_old/: api.md  api.zh.md  erd_driven.zh.md  fastapi-pydantic-architecture-outline.en.md  fastapi-pydantic-architecture-outline.md  graphql.md  graphql.zh.md  inherit_reuse.zh.md  install.md  introduction.md  migration.md  schema_first.zh.md  use_case.md  why.zh.md
docs_v1/: about.zh.md  changelog-v2.en.md  reference_api.en.md
erd_and_autoload/: index.html
erd_define_subset/: index.html
erd_driven/: index.html
examples/: 0_demo.py  0_demo_loader.py  0_demo_loader_collect.py  0_demo_loader_expose.py  0_readme_demo.py  0_test.py  10_tree.py  11_tree.py  12_readme.py  13_for_loop.py  14_simple.py  15_tree.py  16_dataloader_request_fields.py  1_simple.py  1_simple_resolve.py  2_simple_array.py  3_resolve_recursively.py  4_sqlalchemy_demo.py  5_sqlalchemy_loaderdepend.py  6_sqlalchemy_loaderdepend_global_filter.py  7_resolve_recursively.py  8_simple_loader.py  9_readme.py  9_test.py  basic.py  lucky.py  nested.py  sqla_dataloader.py  sqla_dataloader_with_update.py
expose_and_collect/: index.html
fastapi-pydantic-architecture-outline/: index.html
fastapi_integration/: index.html
graphql/: index.html
graphql_and_mcp/: index.html
graphql_guide/: index.html
inherit/: index.html
inherit_reuse/: index.html
install/: index.html
introduction/: index.html
mcp_service/: index.html
migration/: index.html
orm_integration/: index.html
overrides/: home.html
philosophy/: index.html
post_processing/: index.html
pydantic_resolve/: __init__.py  analysis.py  compat.py  constant.py  core.py  exceptions.py  loader_manager.py  logger.py  resolver.py  types.py  util.py
quick_start/: index.html
reference_api/: index.html
reference_bridge/: index.html
research/: 10_class.py  1_recursive_futures.py  2_update_forward_ref.py  3_dataclass_forward_refs.py  4_together.py  5_pydantic.py  6_dataclass_forward_refs.py  7_get_func_params.py  8_config.py  9_yield_test.py  conversion.py  parse_obj_as_test.py  test_annotated.py
scenario_contract/: index.html
schema_first/: index.html
search/: search_index.json
source_mapping/: index.html
stylesheets/: extra.css
tests/: conftest.py  memleak.py  test_depends.py  test_exception.py  test_exception_from_resolve.py  test_forward_ref.py  test_memleak.py  test_object.py  test_pydantic_exception.py  test_resolve_can_check_depend.py  test_resolver.py  test_resolver_class.py  test_resolver_class_with_dataloader.py  test_resolver_list.py  test_return_type.py  test_scope_alignment.py  test_tuple.py  test_with_dataloader.py  test_with_sqlite.py  test_with_sqlite_with_depends_and_udpates.py  test_with_sqlite_with_loader_depend.py  test_with_sqlite_with_loader_depend_2.py
tree/: index.html
use_case/: index.html
v1/: index.html
voyager_guide/: index.html
why/: index.html
zh/: index.html
(+516 files in other folders)
