[project]
name = "pydantic-resolve"
version = "2.4.6"
description = "pydantic-resolve turns pydantic from a static data container into a powerful composable component."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "tangkikodo", email = "allmonday@126.com" },
]
keywords = ["pydantic", "dataloader", "resolver"]
dependencies = [
    "aiodataloader >= 0.4.0,<0.5.0"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
]

[project.urls]
Repository = "https://github.com/allmonday/pydantic_resolve"


[project.optional-dependencies]
dev = [
    "tox>=4.4.6,<5.0.0",
    "pytest>=7.2.2,<8.0.0",
    "pytest-benchmark[histogram]>=5.0.1",
    "pytest-cov>=4.0.0,<5.0.0",
    "coverage>=7.2.1,<8.0.0",
    "aiosqlite>=0.18.0,<0.19.0",
    "pydantic>=2.12.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.7,<3.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "mkdocs-material>=9,<10",
    "mkdocs-static-i18n[material]==1.2.0",
    "psutil>=7.1.0,<8.0.0",
    "ruff>=0.14.5,<0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_resolve"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]